Move public images to backend static assets and prefer backend-hosted media in frontend; update LoginPage and HomePage to use centralized media URLs\n\nMoved poster/logo into backend/src/main/resources/static/assets/logo and updated frontend to resolve media via backend.\n\nCo-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>